@@ -1,16 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST florence-0.5.1.tar.bz2 631132 RMD160 dc18071c98bfa3deb53f2ef1a48d69525c0fa92c SHA1 a3f1c29dd436150002ec14ce9a63de1d72bd1f91 SHA256 7b06ed84ef2b7b22d8d2cf0c7d013a05409bd82028240ac8719a68b192d5bc62
-DIST florence-0.5.3.tar.bz2 846832 RMD160 9f21411eefd6f4fb8dbad8c6b9ce75377e0bc363 SHA1 0e82eeff8d141c2dd2421d179a2b2f91889d5147 SHA256 7f75973260f08b8a8a71c05ed2cd715cce6cfa5e17ac7fab4dede8b407a5faa3
-EBUILD florence-0.5.1.ebuild 1087 RMD160 d0f946aa1f373f09d916dfabfc5e6733f5f85fcd SHA1 4043bbc3b34eb5219147103d36b60d4b77837fd2 SHA256 4e6068a268bcd81fac12ee86fccf9d1b92c7ad18623cc8673b03cd8a1ff7da18
-EBUILD florence-0.5.3.ebuild 1088 RMD160 16614b57fa482dbd52247c29c9be2ce0cf4111c1 SHA1 1c43aa2622cfa506cba8d411d5b1146a305bd861 SHA256 2e97d011bfd50f9ca3185f7ce115923e654f26542483d9be4e13736a19a62c0b
-MISC ChangeLog 560 RMD160 c0ab04e0c7e13a123ee4c5b53e682d15129b7a2c SHA1 b346e0d6f8573e94b896f183525a200a76356955 SHA256 1e9a9ced9ce469b10ac49a6ba3023b328908144ca10a0eae822df8fe64d5937f
-MISC metadata.xml 197 RMD160 893edf1438d595cd663230d6f8560df2dbd8a2db SHA1 5182c9549556f41d87bac6cd32ef892f9e62f2da SHA256 a142667810e0d12df593fef732bc0f70ced18d5bfc692184025b4c7439246ddb
+DIST florence-0.6.0.tar.bz2 843826 SHA256 d2d74a923591e1a6db412058877dbf9ef839712af56e41fd41cb8eefbef1f60e SHA512 23b4a37047f483da5cc1935319b3d33f0f1961c9151e1862707be21f32ca2b5ad058c3c1a1b6e74df8019356b2d8add03b379430a598fdd18e600cddc33ebfe4 WHIRLPOOL f42f9ed225b842a82eabc31e50360c3d1572b5e6c299e46f35d5cfdc051b761b655cbe9a67b5c204f80826743dd6d124c7c4c2c2857685e9dccd144a9cc0a654
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk+Jx7cACgkQknrdDGLu8JCpsQEAm20qBmJtfebteF3w4xaWpH25
-xdzNSWo2t/EEcchnNtgA/ikDBQZDJHl2PxoimQsw6DU3xblR/EeEbT4wDvEfZyuB
-=aMdu
+iF4EAREIAAYFAlCZnnoACgkQknrdDGLu8JC4aQEAm+mTqgqzl1c3bcPQiHCda+vN
+BlvR9L1ns9IUD4/qeeIA/AgR65DZkO1RQVsShzkUcl4aCiYcRXXga9P+DdNcXTBr
+=6Daz
 -----END PGP SIGNATURE-----
