@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*florence-0.6.0 (06 Nov 2012)
+
+  06 Nov 2012; Michael Weber <xmw@gentoo.org> -florence-0.5.1.ebuild,
+  -florence-0.5.3.ebuild, +florence-0.6.0.ebuild:
+  Version bump.
+
 *florence-0.5.3 (14 Apr 2012)
 
   14 Apr 2012; Michael Weber <xmw@gentoo.org> -florence-0.5.0.ebuild,
